LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__LimitCounter__c/IntroHive__LimitCounter__c.object-meta.xml
<CustomObject>
    <label>Limit Counter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limit_Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>