LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__LimitCounter__c/fields/IntroHive__Count__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Count__c</fullName>
    <description>Selected counter type</description>
    <label>Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>