LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__LimitCounter__c/fields/IntroHive__CounterType__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__CounterType__c</fullName>
    <description>Type of counter we are tracking</description>
    <label>CounterType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
                <default>true</default>
                <label>Future</label>
            </value>
            <value>
                <fullName>Row Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>