LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__LimitCounter__c/fields/IntroHive__Date__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Date__c</fullName>
    <description>The Date the count is for.</description>
    <label>Limit&apos;s Date</label>
    <type>DateTime</type>
</CustomField>